2022-07-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/s.tmac (IX): Drop.
	* NEWS: Add item.

2022-07-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/s.tmac: Add "sorry" implementations for documented but
	unsupported Unix Version 7 ms macros.  This way it's easier to
	tell when a historical document needs one and this case is
	distinguishable from a document-private macro warned about with
	"groff -w mac".

2022-07-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/s.tmac (UX): Drop undocumented support for this macro.
	This implementation isn't consistent with historical ones, which
	identified the trademark holder.  But doing that is a problem,
	so just stop trying to cope.  Also, spelling Unix in full caps
	was an imposition by the AT&T legal department on on the CSRC.

	"The name Unix is a trademark, originally owned by Bell Labs and
	subsequently traded off like a baseball card among a number of
	companies." -- Ben Klemens

2022-07-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	[ms]: Replace incomplete documentation of unimplemented macros.

	* doc/groff.texi (Missing ms Macros):
	* doc/ms.ms (AT&T ms macros not appearing in groff ms): Drop,
	replacing with...

	* doc/groff.texi (Unix Version 7 ms Macros Not Implemented by
	groff ms):
	* doc/ms.ms (Unix Version 7 ms macros not implemented by groff
	ms):
	* tmac/groff_ms.7.man (Unix Version 7 macros not implemented by
	groff ms): ...these.

2022-07-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (do_translate): Throw an error
	diagnostic when the user attempts to translate space characters.
	{By contrast, translating _to_ [unbreakable, unadjustable]
	spaces is an old troff hack often seen as ".tr ~ ", and largely
	superseded by groff's "\~" escape sequence, now widely supported
	by troffs.}

	Fixes <https://savannah.gnu.org/bugs/?60803>.  Thanks to T. Kurt
	Bond and Oliver Corff for the report.
