@@ -203,6 +203,7 @@ tmac_TESTS = \
   tmac/tests/s_SH-resets-IP-indentation-amount.sh \
   tmac/tests/s_TC-works-with-percent-in-custom-titles.sh \
   tmac/tests/s_XA-literal-no-argument-suppresses-leader.sh \
+  tmac/tests/s_mark-column-start-correctly.sh \
   tmac/tests/s_rejects-too-short-page-lengths.sh
 TESTS += $(tmac_TESTS)
 EXTRA_DIST += $(tmac_TESTS)
